jACBrFramework/ACBrFramework_JNI/include/ACBrTEF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef void (*AguardaRespCallback) (PCHAR Arquivo,int SegundosTimeOut,BOOL *Interromper);


typedef void (*AntesCancelarTransacaoCallback) (INTPTR RespostaPendente);


typedef void (*AntesFinalizarRequisicaoCallback) (INTPTR Req);


typedef void (*BloqueiaMouseTecladoCallback) (BOOL Bloqueia,BOOL *Tratado);


typedef void (*ComandaECFAbreVinculadoCallback) (PCHAR COO,PCHAR IndiceECF,double Valor,RetornoECF *RetornoECF);


typedef void (*ComandaECFCallback) (ACBrTEFDOperacaoECF Operacao,INTPTR Resp,RetornoECF *RetornoECF);


typedef void (*ComandaECFImprimeViaCallback) (ACBrTEFDTipoRelatorio TipoRelatorio,int Via,INTPTR ImagemComprovante,int ImagemComprovanteCount,RetornoECF *RetornoECF);


typedef void (*ComandaECFPagamentoCallback) (PCHAR IndiceECF,double Valor,RetornoECF *RetornoECF);


typedef void (*ComandaECFSubtotalizaCallback) (double DescAcre,RetornoECF *RetornoECF);


typedef void (*DepoisCancelarTransacoesCallback) (INTPTR RespostasPendentes);


typedef void (*DepoisConfirmarTransacoesCallback) (INTPTR RespostasPendentes);


typedef void (*ExecutaAcaoCallback) (BOOL *Tratado);


typedef void (*ExibeMsgCallback) (ACBrTEFDOperacaoMensagem Operacao,PCHAR Mensagem,ModalResult *AModalResult);


typedef void (*InfoECFCallback) (ACBrTEFDInfoECF Operacao,PCHAR RetornoECF,int RetornoECFLen);


typedef void (*MudaEstadoReqCallback) (ACBrTEFDReqEstado EstadoReq);


typedef void (*MudaEstadoRespCallback) (ACBrTEFDRespEstado EstadoResp);

DllImport int TEF_Create(INTPTR* tefHandle);

DllImport int TEF_Destroy(INTPTR* tefHandle);

DllImport int TEF_GetUltimoErro(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_SetOnAguardaResp(const INTPTR tefHandler, const AguardaRespCallback method);

DllImport int TEF_SetOnAntesCancelarTransacao(const INTPTR tefHandler, const AntesCancelarTransacaoCallback method);

DllImport int TEF_SetOnAntesFinalizarRequisicao(const INTPTR tefHandler, const AntesFinalizarRequisicaoCallback method);

DllImport int TEF_SetOnBloqueiaMouseTeclado(const INTPTR tefHandler, const BloqueiaMouseTecladoCallback method);

DllImport int TEF_SetOnComandaECF(const INTPTR tefHandler, const ComandaECFCallback method);

DllImport int TEF_SetOnComandaECFAbreVinculado(const INTPTR tefHandler, const ComandaECFAbreVinculadoCallback method);

DllImport int TEF_SetOnComandaECFImprimeVia(const INTPTR tefHandler, const ComandaECFImprimeViaCallback method);

DllImport int TEF_SetOnComandaECFPagamento(const INTPTR tefHandler, const ComandaECFPagamentoCallback method);

DllImport int TEF_SetOnComandaECFSubtotaliza(const INTPTR tefHandler, const ComandaECFSubtotalizaCallback method);

DllImport int TEF_SetOnDepoisCancelarTransacoes(const INTPTR tefHandler, const DepoisCancelarTransacoesCallback method);

DllImport int TEF_SetOnDepoisConfirmarTransacoes(const INTPTR tefHandler, const DepoisConfirmarTransacoesCallback method);

DllImport int TEF_SetOnExibeMsg(const INTPTR tefHandler, const ExibeMsgCallback method);

DllImport int TEF_SetOnInfoECF(const INTPTR tefHandler, const InfoECFCallback method);

DllImport int TEF_SetOnLimpaTeclado(const INTPTR tefHandler, const ExecutaAcaoCallback method);

DllImport int TEF_SetOnMudaEstadoReq(const INTPTR tefHandler, const MudaEstadoReqCallback method);

DllImport int TEF_SetOnMudaEstadoResp(const INTPTR tefHandler, const MudaEstadoRespCallback method);

DllImport int TEF_SetOnRestauraFocoAplicacao(const INTPTR tefHandler, const ExecutaAcaoCallback method);